--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<script type="text/javascript" src="/js/login.js"></script>
+	<script type="text/javascript" src="/practica2/js/login.js"></script>
 </head>
 <body>
 	<input type="checkbox" class="checkbox" id="menu-toogle"/>
