cambio en la ruta desde htdocs y login
no tengo claro la ruta porque falla el post

--- a/login.html
+++ b/login.html
@@ -9,8 +9,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<script type="text/javascript" src="/practica2/js/login.js"></script>
+	<script type="text/javascript" src="/practica2/js/funciones_genericas.js"></script>
 </head>
-<body>
+<body onload="arranque();">
 	<input type="checkbox" class="checkbox" id="menu-toogle"/>
 	<label for="menu-toogle"><span></span></label>
 	<div id="banner">
@@ -36,7 +37,7 @@
 				<h1>Login</h1>
 			</header>
 			<p>Desde esta zona se puede logear, debe estar registrado antes.</p>
-			<form onsubmit="return entrar(this);">
+			<form onsubmit="return peticionAJAX_POST('/practica2/rest/post/login/');">
 				<label for="userlogin">Usuario:</label><br/><input type="text" name="userlogin" id="userlogin"  class="input" pattern="[a-zA-Z]{1}[a-zA-Z0-9]*" required autofocus/>
 				<br/>
 				<label  for="password">Contraseña:</label><br/><input type="password" name="password" id="password" class="input" pattern="[a-zA-Z0-9]+" required />
@@ -48,6 +49,8 @@
 			</footer>
 	</fieldset>
 	</main>
+	<div id="devuelto">
+	</div>
 	<footer class="footer">
 		<p>
 			<span>jTravel&copy;</span>
