--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="/practica2/js/funciones_genericas.js"></script>
 </head>
 <body onload="arranque();">
+	<div class="zoom" id="zoo">hola</div>
 	<input type="checkbox" class="checkbox" id="menu-toogle"/>
 	<label for="menu-toogle"><span></span></label>
 	<div id="banner">
@@ -43,6 +44,7 @@
 				<label  for="password">Contraseña:</label><br/><input type="password" name="password" id="password" class="input" pattern="[a-zA-Z0-9]+" required />
 				<br/>
 				<input type="submit" value="Entrar ->"/>
+				<p id="devuelto"></p>
 			</form>
 			<footer>
 				<h6><a href="#">¿Ha olvidado la contraseña?</a></h6>
