login casi terminado falta redireccion
falta redireccion se logea y se crea la sessionstorage del usuario
login_session

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="/practica2/js/funciones_genericas.js"></script>
 </head>
 <body onload="arranque();">
-	<div class="zoom" id="zoo">hola</div>
+	<div class="zoom" id="zoo"><div class="mensaje" id="mensaje"></div></div>
 	<input type="checkbox" class="checkbox" id="menu-toogle"/>
 	<label for="menu-toogle"><span></span></label>
 	<div id="banner">
@@ -32,8 +32,7 @@
 		</ul>
 	</nav>
 	<main class="login centrado">
-	<fieldset>
-    <legend>Entrar en el sistema:</legend>
+	<fieldset><legend>Entrar en el sistema:</legend>
 			<header>
 				<h1>Login</h1>
 			</header>
