--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="/practica2/js/login.js"></script>
 	<script type="text/javascript" src="/practica2/js/funciones_genericas.js"></script>
 </head>
-<body onload="arranque();">
+<body onload="arranque();arranque_personalizado();">
 	<div class="zoom" id="zoo"><div class="mensaje" id="mensaje"></div></div>
 	<input type="checkbox" class="checkbox" id="menu-toogle"/>
 	<label for="menu-toogle"><span></span></label>
@@ -22,13 +22,15 @@
 	</div>
 	<nav id="menu">
 		<h3>Menu Despegable</h3>
-		<ul>
+		<ul id="menu_lista">
 			<li><a href="index.html">Inicio</a></li>
-			<li><a href="buscar_viajes.html">Buscar Viaje</a></li>
-			<li><a href="crear_viaje.html">Crear Viaje</a></li>
-			<li><a href="registro.html">Registro</a></li>
-			<li><a href="login.html">Login</a></li>
-			<li><a href="acerca.html">Nosotros</a></li>
+			<li><a href="buscar_viajes.html"><span class="icon-search"></span>Buscar Viaje</a></li>
+			<li><a href="crear_viaje.html"><span class="icon-pencil"></span>Crear Viaje</a></li>
+			<li><a href="registro.html"><span class="icon-user-add-outline"></span>Registro</a></li>
+			<li><a href="registro.html"><span class="icon-users"></span>Perfil</a></li>
+			<li><a href="login.html"><span class="icon-users"></span>Login</a></li>
+			<li><a href="acerca.html"><span class="icon-user"></span>Nosotros</a></li>
+			<li><a href="#" onclick="cerrar();">Cerrar Sesion</a></li>
 		</ul>
 	</nav>
 	<main class="login centrado">
