--- a/login.html
+++ b/login.html
@@ -44,6 +44,8 @@
 				<br/>
 				<label  for="password">Contraseña:</label><br/><input type="password" name="password" id="password" class="input" pattern="[a-zA-Z0-9]+" required />
 				<br/>
+				<input type="checkbox" name="recordar" id="recordar"/> <label for="recordar">¿Quiere recordar su usuario y contraseña?</label>
+				<br/>
 				<input type="submit" value="Entrar ->"/>
 				<p id="devuelto"></p>
 			</form>
