--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="/practica2/js/funciones_genericas.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
-<body onload="arranque();">
+<body onload="arranque();arranque_personalizado();">
 	<input type="checkbox" class="checkbox" id="menu-toogle"/>
 	<label for="menu-toogle"><span></span></label>
 	<div id="banner">
