Parte de viaje terminada
ya se puede visualizar los viajes reales

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 	</main>
 	<div class="sangria_default">
 		<h3>Ultimo comentarios:</h3>
+		<h6 for="brefresh" onclick="peticionAJAX_GET2('/practica2/rest/get/comentario.php?prm=usu2&u=10');">Refrescar</h6>
 	</div>
 	<div class="comentario_index" id="come">
+	hola
 	</div>	
 	<footer class="footer">
 	<p>
