busqueda de viajes completada
faltaria corregir el problema de las estrellas, y hacer la busqueda
global que me ha dicho el profesor que no hace falta

--- a/buscar_viajes.html
+++ b/buscar_viajes.html
@@ -78,6 +78,11 @@
 			<li><a href="#" onclick="cerrar();">Cerrar Sesion</a></li>
 		</ul>
 	</nav>
+	<main id="main_entradas">
+	<h3>Resultados:</h3>
+	<section id="entradas">
+	</section>
+	</main>
 	<footer class="footer">
 	<p>
 		<span>jTravel&copy;</span>
