--- a/registro.html
+++ b/registro.html
@@ -6,13 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css"/>
 	<link rel="stylesheet" type="text/css" href="css/fontello.css"/>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
-	<script type="text/javascript" src="registro.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'/>
 	<script type="text/javascript" src="/practica2/js/registro.js"></script>
 	<script type="text/javascript" src="/practica2/js/funciones_genericas.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
-<body onload="arranque();">
+<body onload="arranque(); arranque_reg()">
 	<div class="zoom" id="zoo"><div class="mensaje" id="mensaje"></div></div>
 	<input type="checkbox" class="checkbox" id="menu-toogle"/>
 	<label for="menu-toogle"><span></span></label>
@@ -41,18 +40,24 @@
 				<h1>¡Regístrate!</h1>
 			</header>
 			<p>Aquí te puedes registrar.</p>
-			<form name="registro" onsubmit="return envio();">
-				<label for="userregis">Usuario:</label><br/><input type="text" name="userregis" id="userregis"  class="input" pattern="[a-zA-Z]{1}[a-zA-Z0-9]{0,19}" required autofocus/>
+			<form name="registro" onsubmit="return envio();" method = "POST">
+
+				<p class = "error" id="usr_no_disponible" > Usuario no disponible <br> </p>
+				<p class = "correcto" id="usr_disponible" > El usuario está disponible <br> </p>
+
+				<label for="userregis">Usuario:</label><br/><input type="text" name="userregis" id="userregis"  class="input" pattern="[a-zA-Z]{1}[a-zA-Z0-9]{0,19}" required autofocus onkeyup="compruebausu()"/>
 				<br/>
 				<label  for="password">Contraseña:</label><br/><input type="password" name="password" id="password" class="input" pattern="[_a-zA-Z0-9-]{1,20}" required />
 				<br/>
-				<p id="no"> Las contraseñas no coinciden <br> </p>
-				<label  for="password2">Repite la contraseña:</label><br/><input type="password" name="password2" id="password2" class="input" pattern="[_a-zA-Z0-9-]{1,20}" required />
+				<p class = "error" id="pass_no_iguales" > Las contraseñas no coinciden <br> </p>
+				<label  for="password2">Repite la contraseña:</label><br/><input type="password" name="password2" id="password2" class="input" onkeyup="comparaPassword()" pattern="[_a-zA-Z0-9-]{1,20}" required />
 				<br/
 				<label for="nombre_user">Nombre completo:</label><br/><input type="text" name="nombre_user" id="nombre_user"  class="input" required/>
 				<br/>
 				<label for="email">Email:</label><br/><input type="email" name="email" id="email"  class="input" required />
 				<br/>
+
+				<p id="archivo_muy_grande" class = "error"> El archivo no debe superar 500 KB<br> </p>
 				<label for="subir">Subir imagen de perfil:</label><br/><input type="file" name="subir" id="subir" onchange="previsualizar()">
 				<br/>
 				<img src="" alt="" id="fPerfil">
