Update done, sometimes

--- a/registro.html
+++ b/registro.html
@@ -40,7 +40,7 @@
 				<h1>¡Regístrate!</h1>
 			</header>
 			<p>Aquí te puedes registrar.</p>
-			<form name="registro" onsubmit="return envio();" method = "POST">
+			<form name="registro" onsubmit="return envio();" method = POST >
 
 				<p class = "error" id="usr_no_disponible" > Usuario no disponible <br> </p>
 				<p class = "correcto" id="usr_disponible" > El usuario está disponible <br> </p>
