--- a/registro.html
+++ b/registro.html
@@ -35,12 +35,12 @@
 	</nav>
 	<main class="login centrado">
 	<fieldset>
-    <legend>Registrarse:</legend>
+    <legend id="info_perfil">Registrarse:</legend>
 			<header>
-				<h1>¡Regístrate!</h1>
+				<h1 id="titu_perfil">¡Regístrate!</h1>
 			</header>
-			<p>Aquí te puedes registrar.</p>
-			<form name="registro" onsubmit="return envio();" method = POST >
+			<p id="info_extra">Aquí te puedes registrar.</p>
+			<form name="registro" onsubmit="return envio();" method="POST" enctype="multipart/form-data">
 
 				<p class = "error" id="usr_no_disponible" > Usuario no disponible <br> </p>
 				<p class = "correcto" id="usr_disponible" > El usuario está disponible <br> </p>
@@ -60,9 +60,9 @@
 				<p id="archivo_muy_grande" class = "error"> El archivo no debe superar 500 KB<br> </p>
 				<label for="subir">Subir imagen de perfil:</label><br/><input type="file" name="subir" id="subir" onchange="previsualizar()">
 				<br/>
-				<img src="" alt="" id="fPerfil">
+				<img src="" alt="" id="fPerfil"/>
 				<br/>
-				<input type="submit" value="Registro"/>
+				<input type="submit"  id="env" value="Registro"/>
 			</form>
 	</fieldset>
 	</main>
